Solved overflow issue with pop up box
On wider, shorter screens, the pop up content was overflowing. I added a scroll option for those infrequent times and more obscure screen dimensions

--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,8 @@ header {
     top: 0;
     bottom: 0;
     margin: auto;
+    overflow: scroll;
+    max-height: 90vh;
 }
 
 .hidden {
